--- a/ruggine/Cargo.toml
+++ b/ruggine/Cargo.toml
@@ -14,6 +14,8 @@ uuid = { version = "1.0", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 crossterm = "0.27"
 sysinfo = "0.30"
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
+anyhow = "1.0"
 
 [features]
 default = ["client", "server"]  # Abilita entrambe per default
