--- a/ruggine/.env
+++ b/ruggine/.env
@@ -1,6 +1,6 @@
 # Configurazione Database per Ruggine
 
-DATABASE_URL=sqlite:ruggine.db
+DATABASE_URL=sqlite:data/ruggine.db
 
 # Configurazioni SQLite
 SQLITE_SYNCHRONOUS=NORMAL
