Add database configuration and remove SQLx migrations
- Added .env configuration file with database settings
- Implemented Config module to load environment variables
- Removed SQLx migrations to use static database
- Updated .gitignore to track important files for collaboration
- Added dotenvy dependency for .env file support
- Database and configuration files now tracked for team collaboration

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,17 @@ Thumbs.db
 **/ruggine_performance.log
 *.log
 
+# Database files (commentato - vogliamo tracciare il database statico)
+# data/
+# *.db
+# *.sqlite
+# *.sqlite3
+
+# Environment files (commentato - vogliamo tracciare .env per collaborazione)
+# .env
+# .env.local
+# .env.production
+
 # Temporary files
 *.tmp
 *.temp
