--- a/ruggine/.env
+++ b/ruggine/.env
@@ -7,6 +7,12 @@ SQLITE_SYNCHRONOUS=NORMAL
 SQLITE_JOURNAL_MODE=WAL
 SQLITE_CACHE_SIZE=10000
 
+# Configurazioni di Rete
+SERVER_HOST=0.0.0.0
+SERVER_PORT=5000
+MAX_CLIENTS=100
+ENABLE_ENCRYPTION=true
+
 # Cleanup automatico
 CLEANUP_DAYS=30
 PERFORMANCE_METRICS_RETENTION_DAYS=7
