--- a/ruggine/.env
+++ b/ruggine/.env
@@ -13,6 +13,14 @@ SERVER_PORT=5000
 MAX_CLIENTS=100
 ENABLE_ENCRYPTION=true
 
+# Configurazioni Client
+# CLIENT_DEFAULT_HOST: Indirizzo locale per quando sei tu (host) a connetterti al tuo server
+CLIENT_DEFAULT_HOST=127.0.0.1
+CLIENT_DEFAULT_PORT=5000
+# CLIENT_PUBLIC_HOST: Indirizzo che i tuoi amici useranno per connettersi al tuo server
+# Il tuo IP pubblico reale per connessioni remote
+CLIENT_PUBLIC_HOST=95.234.28.229
+
 # Cleanup automatico
 CLEANUP_DAYS=30
 PERFORMANCE_METRICS_RETENTION_DAYS=7
