new gui with iced

--- a/ruggine/Cargo.toml
+++ b/ruggine/Cargo.toml
@@ -17,23 +17,23 @@ sysinfo = "0.30"
 sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
 anyhow = "1.0"
 dotenvy = "0.15"
-eframe = "0.28"
-egui = "0.28"
 tokio-stream = "0.1"
+iced = { version = "0.12", features = ["tokio", "debug"] }
 
 [features]
 default = ["client", "server"]  # Abilita entrambe per default
 server = []
 client = []
 
+[lib]
+name = "ruggine"
+path = "src/lib.rs"
+
 [[bin]]
 name = "ruggine-server"
 path = "src/server/main.rs"
 
 [[bin]]
-name = "ruggine-client"
-path = "src/client/main.rs"
-
-[[bin]]
 name = "ruggine-gui"
-path = "src/client/gui_app.rs"
+path = "src/client/gui_main.rs"
+
